--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet/less" type="text/css" href="css/style.less">
+  <link rel="icon" type="image/png" href="favicon.png" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js"></script>
 
   <!--[if lt IE 9]>
@@ -44,6 +45,7 @@
 
   <!-- CUSTOM -->
   <script src="libs/js/dragndrop.js"></script>
+  <script src="js/const.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/directives.js"></script>
