--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   <meta name="author" content="SitePoint">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link rel="stylesheet/less" type="text/css" href="css/style.less">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
   <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="stylesheet/less" type="text/css" href="css/style.less">
+  <link rel="stylesheet/less" type="text/css" href="css/builds.less">
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js"></script>
 
   <!--[if lt IE 9]>
@@ -30,6 +33,8 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-cookies.js"></script>
   <script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
   <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+  <script src="https://momentjs.com/downloads/moment-with-locales.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-moment/1.0.1/angular-moment.min.js"></script>
   <script>
     var config = {
       apiKey: "AIzaSyDJTNHd_r3rb8VxXpp6a6YEYyjTCut_Hts",
